# veridex-contracts

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  LICENSE  Makefile  Makefile.test  README.md  VERSIONING.md  build-release.sh  rust-toolchain.toml  test-coverage.sh
.github/workflows/: ci.yml
contracts/ledgerlens-score/: Cargo.toml
contracts/ledgerlens-score/src/: lib.rs
contracts/veridex-oracle/: Cargo.toml
contracts/veridex-oracle/src/: lib.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  BEST_PRACTICES.md  CHANGELOG.md  COMPLIANCE.md  DATA_STRUCTURES.md  DEVOPS.md  DISASTER_RECOVERY.md  FAQ.md  GLOSSARY.md  IMPLEMENTATION_GUIDE.md  INCIDENT_RESPONSE.md  INTEGRATION_CHECKLIST.md  MIGRATION_GUIDE.md  MONITORING.md  OPERATIONS.md  PERFORMANCE_BENCHMARKS.md  PRIVACY_POLICY.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY_AUDIT.md  SLA.md  TECHNICAL_SPECS.md  TROUBLESHOOTING.md  UTILITIES.md
